--- a/templates/dashboards/sales/sell.html
+++ b/templates/dashboards/sales/sell.html
@@ -1902,9 +1902,9 @@
 
                 const shouldReloadValue = document.getElementById('popupCloseBtnRelode').value;
                 const shouldReload = shouldReloadValue === "true";
-
+                
                 if (shouldReload) {
-                    location.reload();
+                    location.href = '/sales/ready-to-go-orders';
                 }
             }
 
