--- a/templates/dashboards/manager/verify_orders.html
+++ b/templates/dashboards/manager/verify_orders.html
@@ -1494,7 +1494,7 @@
                     <div class="invoice-header">
                         <span>❑ ${invoiceObj.number}</span>
                         <div class="invoice-id-row">
-                        <span style="font-size:0.9em;color:#666;" id="invoice_date_1">${invoiceObj.date}</span>
+                        <span style="font-size:0.9em;color:#c3bfbf;" id="invoice_date_1">${invoiceObj.date}</span>
 
                             <div class="invoice-actions">
 
